--- a/templates/list.html
+++ b/templates/list.html
@@ -12,9 +12,10 @@
     <div class="alert alert-success" role="alert">
         <p>タイトル：{{ item.title }}</p>
         <p>投稿者：{{ item.author }}</p>
-        <a href="#" class="btn btn-primary" role="button" aria-pressed="true">Primary link</a>
-        <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">Link</a>
+        <a href="{% url 'good' item.pk %}" class="btn btn-primary" role="button" aria-pressed="true">いいねする</a>
+        <a href="{% url 'read' item.pk %}" class="btn btn-secondary" role="button" aria-pressed="true">既読にする</a>
     </div>
     {% endfor %}
+    <a href="{% url 'logout' %}">Logout</a>
 </div>
 {% endblock content %}
