--- a/templates/list.html
+++ b/templates/list.html
@@ -10,10 +10,10 @@
 <div class="container">
     {% for item in object_list %}
     <div class="alert alert-success" role="alert">
-        <p>タイトル：{{ item.title }}</p>
+        <p>タイトル：<a href="{% url 'detail' item.pk %}">{{ item.title }}</a></p>
         <p>投稿者：{{ item.author }}</p>
-        <a href="{% url 'good' item.pk %}" class="btn btn-primary" role="button" aria-pressed="true">いいねする</a>
-        <a href="{% url 'read' item.pk %}" class="btn btn-secondary" role="button" aria-pressed="true">既読にする</a>
+        <a href="#" class="btn btn-primary" role="button" aria-pressed="true">いいねする</a>
+        <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">既読にする</a>
     </div>
     {% endfor %}
     <a href="{% url 'logout' %}">Logout</a>
