--- a/templates/list.html
+++ b/templates/list.html
@@ -10,7 +10,7 @@
 <div class="container">
     {% for item in object_list %}
     <div class="alert alert-success" role="alert">
-        <p>タイトル：<a href="{% url 'detail' item.pk %}">{{ item.title }}</a></p>
+        <p>タイトル：{{ item.title }}</p>
         <p>投稿者：{{ item.author }}</p>
         <a href="#" class="btn btn-primary" role="button" aria-pressed="true">いいねする</a>
         <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">既読にする</a>
